--- a/task-HTML/inline.html
+++ b/task-HTML/inline.html
@@ -9,41 +9,31 @@
 <body>
     <h1>Page-level & inline CSS Styling</h1>
     <pre>
-<p style="color: gold;font-size: large;">Lorem ipsum dolor sit amet consectetur adipisicing elitOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
+<p style="color: gold;font-size: large;">Lorem ipsum dolor sit amet consectetur adipisicing elitOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit 
+Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem 
+dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem 
 blanditiis atque dolores cupiditate recusandae? Hic!Lorem ipsum dolor sit amet consectetur adipisicing elit.Odit reiciendis saepe itaque explicabo voluptatem mollitia
-Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-blanditiis atque dolores cupiditate recusandae? Hic!Lorem ipsum dolor sit amet consectetur adipisicing elit.Odit reiciendis saepe itaque explicabo voluptatem mollitia
- Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
- dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
- blanditiis atque dolores cupiditate recusandae? Hic!Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-        </pre></p>
-        <br><br><br>
-        <pre>
-<p style="font-size: large;">  <strong>Inline CSS</strong>Lorem ipsum dolor sit amet consectetur adipisicing elitOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
- Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem molldolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-blanditiis atque dolores cupiditate recusandae? Hic!Lorem ipsum dolor sit amet consectetur adipisicing elit.Odit reiciendis saepe itaque explicabo voluptatem mollitia
-Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
- blanditiis atque dolores cupiditate recusandae? Hic!Lorem ipsum dolor sit amet consectetur adipisicing elit.Odit reiciendis saepe itaque explicabo voluptatem mollitia
- Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
- dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
+Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo 
 blanditiis atque dolores cupiditate recusandae? Hic!Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-                    </pre></p>
- <br><br>
+    </pre></p>
+
+     <pre>
+<p style="font-size: large;">  <strong>Inline CSS</strong> ipsum dolor sit amet consectetur adipisicing elitOdit reiciendis saepe itaque explicabo voluptatem 
+ Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem 
+blanditiis atque dolores cupiditate recusandae? Hic!Lorem ipsum dolor sit amet consectetur adipisicing elit.Odit reiciendis saepe itaque explicabo voluptatem mollitia
+Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem
+dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo 
+ blanditiis atque dolores cupiditate recusandae? Hic!Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
+     </pre></p>
+
  <pre>
-   <p> Lorem ipsum dolor sit amet consectetur adipisicing elitOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-    Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem molldolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
+   <p style="background-image: url(./pexels-photo-255379.jpeg);font-size: large;"> Lorem ipsum dolor sit amet consectetur adipisicing elitOdit reiciendis saepe itaque explicabo voluptatem
+    Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem  
    blanditiis atque dolores cupiditate recusandae? Hic!Lorem ipsum dolor sit amet consectetur adipisicing elit.Odit reiciendis saepe itaque explicabo voluptatem mollitia
-   Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-   dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-    blanditiis atque dolores cupiditate recusandae? Hic!Lorem ipsum dolor sit amet consectetur adipisicing elit.Odit reiciendis saepe itaque explicabo voluptatem mollitia
-    Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-    dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-   blanditiis atque dolores cupiditate recusandae? Hic!Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
-                       </pre></p>
+   Odit reiciendis saepe itaque explicabo voluptatem mollitia Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem 
+   dolorem molestiae vitae veniam deserunt, sed nobis, odio asperioresOdit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo 
+    blanditiis atque dolores cupiditate recusandae? Hic!Odit reiciendis saepe itaque explicabo voluptatem mollitiaOdit reiciendis saepe itaque explicabo voluptatem mollitia
+     </pre></p>
    </body>
                     
 
