--- a/task-HTML/table with link.html
+++ b/task-HTML/table with link.html
@@ -12,33 +12,46 @@
         </div>
     <table  border="1" cellspacing="0">
           <tr>
-            <th>Number</th>
-          <th>Title</th>
-          <th>Github Links</th>
-        </tr>
-         <tr>
-        <td>#1</td>
-        <td>First Html Code!</td>
-        <td>First Folder</td>
+             <th>Number</th>
+             <th>Title</th>
+             <th>Github Links</th>
+          </tr>
+          <tr>
+             <td>#1</td>
+             <td>First Html Code!</td>
+             <td><a
+              href="https://github.com/AhmadRyahnah/Task-HTML/blob/main/task-HTML/Table%20num2.html"
+              target="_blank"
+              >First Folder</a
+            ></td>
+          </tr>
+          <tr>
+             <td>#2</td>
+             <td>Heading and paragraphs</td>
+             <td><a
+              href="https://github.com/AhmadRyahnah/Task-HTML/blob/main/task-HTML/inline.html"
+              target="_blank"
+              >Heading Folder</a
+            ></td>
+          </tr>
+          <tr>
+             <td>#3</td>
+             <td>List</td>
+             <td><a
+              href="https://github.com/AhmadRyahnah/Task-HTML/blob/main/task-HTML/backend.html"
+              target="_blank"
+              >List Folder</a
+            ></td>
          </tr>
-         <tr>
-         <td>#2</td>
-        <td>Heading and paragraphs</td>
-        <td>Heading Folder</td>
-
-      </tr>
-      <tr>
-        <td>#3</td>
-       <td>List</td>
-       <td>List Folder</td>
-
-     </tr>
-     <tr>
-        <td>#4</td>
-       <td>Tables</td>
-       <td>Tables Folder</td>
-
-     </tr>
+          <tr>
+             <td>#4</td>
+             <td>Tables</td>
+             <td><a
+              href=https://github.com/AhmadRyahnah/Task-HTML/blob/main/task-HTML/table.html"
+              target="_blank"
+              >Tables Folder</a
+            ></td>
+        </tr>
       </table>
 </body>
 </html>
